initialisation 12
